--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   equatable: ^2.0.5
   shared_preferences: ^2.3.1
   cupertino_icons: ^1.0.8
+  fl_chart: ^0.69.2
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.10+1
