--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,9 @@ dependencies:
   equatable: ^2.0.5
   shared_preferences: ^2.3.1
   cupertino_icons: ^1.0.8
+  characters: ^1.2.0
   fl_chart: ^0.69.2
+  emoji_picker_flutter: ^3.1.0
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.10+1
