--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   haptic_feedback: ^0.5.1+1
+  share_plus: ^10.1.3
 
 dev_dependencies:
   flutter_test:
