--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: emote_this
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.0
+version: 1.1.0
 
 environment:
   sdk: ^3.5.4
@@ -25,6 +25,10 @@ dependencies:
   flutter_svg: ^2.0.10+1
   haptic_feedback: ^0.5.1+1
   share_plus: ^10.1.3
+  core_logic:
+    git:
+      url: https://github.com/Vennylost/core_logic.git
+      ref: f5255b6018a7d9d18783feb2e373b4248e04c593
 
 dev_dependencies:
   flutter_test:
